--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text-extractor",
+  "name": "text_extractor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.20",
-    "eslint": "9.14.0",
-    "eslint-config-next": "15.0.3",
-    "next": "15.0.3",
-    "postcss": "8.4.47",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwindcss": "3.4.14"
+    "autoprefixer": "10.4.15",
+    "encoding": "^0.1.13",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "next": "13.4.19",
+    "pg": "^8.11.3",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
+    "tailwindcss": "3.3.3",
+    "tesseract.js": "^5.1.1"
   }
 }
